# GarbageGopher

./: .gitignore  CMakeLists.txt  readme.md
debug/: run.txt  screen.txt
include/: actuators.h  actuators.hpp  camera.hpp  image_processing.hpp  localization.hpp  ml_model.hpp  navigation.hpp  path_planning.hpp  pyheader.h  pyheader.hpp  sensors.h  sensors.hpp
src/: actuators.cpp  camera.cpp  image_processing.cpp  localization.cpp  main.cpp  ml_model.cpp  navigation.cpp  path_planning.cpp  pyheader.cpp  sensors.cpp
